// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentStore displayImportAlreadyUsed fires expected event 1`] = `
Array [
  "viewer:alert",
  Object {
    "value": Object {
      "message": "You have already imported a score for this module in this course, no attempts remain.",
      "title": "Score Already Imported",
    },
  },
]
`;

exports[`AssessmentStore displayScoreImportNotice fires expected event 1`] = `
Array [
  "viewer:alert",
  Object {
    "value": Object {
      "message": "You previously completed this module in another course or assignment. The option to import your highest score will be shown when you start the assessment.",
      "title": "Score Import Available",
    },
  },
]
`;
